# trabalho-3-1-autocomplete-ewertonfsl

./: CMakeLists.txt  README.md
include/: processamento.hpp  resultados.hpp  ui.hpp
src/: autocomplete.cpp  processamento.cpp  resultados.cpp  ui.cpp
