cmake_minimum_required(VERSION 3.5)
project(concordo VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "autocomplete", adiciona neste execut치vel os arquivos src/ui.cpp src/processamento.cpp src/resultados.cpp
add_executable( autocomplete
                src/autocomplete.cpp
                src/ui.cpp
                src/processamento.cpp
                src/resultados.cpp )
# The end
